--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -200,11 +200,20 @@
         top: 2px;
         right: 2px;
     }
+    &__mail{
+        top: 2px;
+        right: 2px;
+    }
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
+    @include mobileL {
+        width: 36px;
+        height: 36px;
+    }
+
 }
 @keyframes an__game_errorWrapper_show {
     100% {
