--- a/sass/elements/game/_inbox.scss
+++ b/sass/elements/game/_inbox.scss
@@ -46,6 +46,10 @@
         @include tablet {
             border-bottom: 6px solid $color-gold;
         }
+        @include mobileL {
+            height: 40px;
+            border-bottom: 4px solid $color-gold;
+        }
     }
     &__mailIcon {
         height: 100%;
@@ -73,6 +77,9 @@
         }
         @include ipadPro {
             height: calc(100% - 53px);
+        }
+        @include mobileL {
+            height: calc(100% - 40px);
         }
         li {
             display: flex;
@@ -124,6 +131,10 @@
                 border-left: 6px solid $color-blue;
                 border-bottom: 6px solid $color-blue;
             }
+            @include mobileL {
+                border-left: 4px solid $color-blue;
+                border-bottom: 4px solid $color-blue;
+            }
         }
         &::before {
             top: 0;
@@ -138,6 +149,10 @@
                 border-right: 6px solid $color-blue;
                 border-top: 6px solid $color-blue;
             }
+            @include mobileL {
+                border-right: 4px solid $color-blue;
+                border-top: 4px solid $color-blue;
+            }
         }
         &:hover::after,
         &:hover::before {
@@ -148,6 +163,7 @@
         @include desktopS {
             padding: 0 10px;
             height: 50px;
+            margin-bottom: 7px;
         }
         @include laptopM {
             padding: 0px 8px;
@@ -160,6 +176,12 @@
         @include tablet {
             padding: 1px 13px;
             height: 63px;
+            
+        }
+        @include mobileL {
+            padding: 1px 9px;
+            height: 44px;
+            margin-bottom: 6px;
         }
     }
 
