--- a/sass/elements/game/_guard.scss
+++ b/sass/elements/game/_guard.scss
@@ -10,6 +10,10 @@
         justify-content: center;
         align-items: center;
         position: relative;
+        @include tablet {
+            background-size: 150% 100%;
+            background-position: 50%;
+        }
     }
     &-city {
         height: 100%;
@@ -18,8 +22,10 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+        overflow: auto;
         @include tablet {
             background-size: 167% 100%;
+            background-position: 50%;
         }
     }
 
@@ -50,19 +56,37 @@
             width: 78%;
             border-radius: 20px;
         }
+        @include mobileL {
+            flex-direction: column;
+            align-items: center;
+        }
+        @include mobileL {
+            border-radius: 16px;
+        }
     }
     &__kingWrapper {
         width: 35%;
+        @include mobileL {
+            width: auto;
+            height: 172px;
+        }
     }
 
     &__infoWrapper {
         width: 65%;
+        @include mobileL {
+            width: 100%;
+        }
     }
 
     &__king {
         width: 100%;
         height: auto;
         object-fit: cover;
+        @include mobileL {
+            height: 100%;
+            width: auto;
+        }
     }
     &__title {
         font-size: 44px;
@@ -84,6 +108,10 @@
         @include ipadPro {
             font-size: 52px;
         }
+        @include mobileL {
+            font-size: 42px;
+            text-align: center;
+        }
     }
     &__text {
         font-size: 1.25rem;
@@ -91,6 +119,10 @@
         line-height: 1.25rem;
         @include ipadPro {
             font-size: 1.5rem;
+        }
+        @include mobileL {
+            width: 100%;
+            text-align: center;
         }
     }
     &__award {
@@ -108,6 +140,9 @@
         }
         @include ipadPro {
             margin-top: 42px;
+        }
+        @include mobileL {
+            justify-content: center;
         }
     }
 
@@ -157,6 +192,9 @@
             cursor: pointer;
             letter-spacing: 0.065rem;
         }
+        @include mobileL {
+            width: 100%;
+        }
     }
     &__summaryWrapper {
         width: 100%;
@@ -167,6 +205,13 @@
         height: calc(100% - 131px);
         @include desktopS {
             height: calc(100% - 120px);
+        }
+        @include mobileL {
+            height: calc(100% - 88px);
+        }
+        @media screen and (max-height: 420px){
+            height: 90vh;
+            margin-top: 20px;
         }
     }
     &__summary {
@@ -181,6 +226,9 @@
         @include ipadPro {
             border-radius: 20px;
         }
+        @include mobileL {
+            border-radius: 16px;
+        }
     }
     &__summaryIcon {
         height: 190px;
@@ -191,6 +239,14 @@
         }
         @include ipadPro {
             height: 313px;
+        }
+        @include tablet {
+            height: 209px;
+        }
+        @media screen and (max-height: 420px){
+            display: block;
+            margin: 0 auto;
+            height: 36vh;
         }
     }
     &__summaryTitle {
@@ -381,6 +437,11 @@
             @include tablet {
                 width: 2.9rem;
                 line-height: 2.8rem;
+            }
+            @include mobileL {
+                font-size: 16px;
+                width: 42px;
+                line-height: 48px;
             }
         }
         @include laptopM {
