--- a/sass/elements/game/_wizard.scss
+++ b/sass/elements/game/_wizard.scss
@@ -11,10 +11,14 @@
     &::-webkit-scrollbar {
         width: 0;
     }
-     @include ipadPro {
+    @include ipadPro {
         grid-template-rows: repeat(5, 1fr);
         grid-template-columns: repeat(2, 1fr);
-     }
+    }
+    @include mobileL {
+        display: flex;
+        flex-direction: column;
+    }
     &__characterWrapper {
         grid-column: 1/1;
         grid-row: 1/1;
@@ -22,9 +26,9 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
-        @include ipadPro {          
-             grid-column: 1/1;
-             grid-row: 1/3;
+        @include ipadPro {
+            grid-column: 1/1;
+            grid-row: 1/3;
         }
     }
     &__characterImg {
@@ -32,14 +36,12 @@
         height: auto;
         object-fit: cover;
         @include ipadPro {
-            
+            width: 75%;
         }
-        
     }
     &__descriptionWrapper {
         display: flex;
         justify-content: center;
-      
 
         grid-column: 1/1;
         grid-row: 2/-1;
@@ -66,18 +68,17 @@
         position: relative;
         backdrop-filter: blur(4px);
         transition: 0.3s;
-          &:hover {
+        &:hover {
             backdrop-filter: blur(5px);
         }
         @include desktopM {
             padding: 7px;
-            
         }
-        @include desktopS{
+        @include desktopS {
             border-radius: 16px;
         }
-      
-        @include laptopL { 
+
+        @include laptopL {
             height: 241px;
         }
         @include laptopS {
@@ -87,6 +88,10 @@
         @include ipadPro {
             height: 100%;
             border-radius: 20px;
+        }
+        @include mobileL {
+            height: 210px;
+            border-radius: 16px;
         }
     }
     &__title {
@@ -106,11 +111,15 @@
         @include laptopS {
             font-size: 24px;
         }
-        @include ipadPro{
-        font-size: 44px;
+        @include ipadPro {
+            font-size: 44px;
         }
         @include tablet {
             font-size: 30px;
+        }
+        @include mobileL {
+            font-size: 32px;
+            text-align: center;
         }
     }
     &__text {
@@ -118,12 +127,16 @@
         word-spacing: 0.125rem;
         line-height: 1.25rem;
         @include ipadPro {
-            font-size:  1.9rem;
+            font-size: 1.9rem;
             line-height: 1.7rem;
         }
         @include tablet {
             font-size: 1.27rem;
             line-height: 1.4rem;
+        }
+        @include mobileL {
+            font-size: 18px;
+            text-align: center;
         }
     }
     &__actionBar {
@@ -133,6 +146,12 @@
         position: absolute;
         bottom: 10px;
         right: 10px;
+        @include mobileL {
+            position: relative;
+            bottom: auto;
+            right: auto;
+            margin-top: 30px;
+        }
     }
     &__actionError {
         position: absolute;
@@ -163,9 +182,12 @@
         }
         @include ipadPro {
             font-size: 1.875rem;
-        } 
+        }
         @include tablet {
             font-size: 1.375rem;
+        }
+        @include mobileL {
+            width: 100%;
         }
     }
     &__countdownWrapper {
@@ -211,7 +233,9 @@
             grid-column: 1/-1;
             grid-row: 3/-1;
         }
-       
+        @include mobileL {
+            margin: 23px 0;
+        }
     }
     &__itemImg {
         width: 141px;
@@ -233,6 +257,10 @@
         @include tablet {
             width: 107px;
             margin-bottom: 132px;
+        }
+        @include mobileL {
+            width: 71px;
+            margin-bottom: 82px;
         }
     }
 }
@@ -262,9 +290,14 @@
         height: 760px;
         border: 10px solid #ffd26a;
     }
-    @include tablet{
+    @include tablet {
         width: 550px;
         height: 550px;
+    }
+    @include mobileL {
+        width: 400px;
+        height: 400px;
+        border: 6px solid #ffd26a;
     }
     &-animation {
         animation: 10s an__spinning_wheel_rotate infinite;
@@ -286,7 +319,7 @@
         left: 195px; // 163
         @include laptopL {
             width: 236px;
-            left: 163px; 
+            left: 163px;
         }
         @include laptopM {
             width: 207px;
@@ -299,6 +332,10 @@
         @include tablet {
             width: 221px;
             left: 154px;
+        }
+        @include mobileL {
+            width: 162px;
+            left: 112px;
         }
     }
 
@@ -320,6 +357,11 @@
             width: 68px;
             height: 68px;
             top: calc(50% - 34px);
+        }
+        @include mobileL {
+            width: 46px;
+            height: 46px;
+            top: calc(50% - 23px);
         }
     }
 
@@ -369,9 +411,18 @@
             width: 204px;
             border: 3px solid $color-gold;
         }
+        @include laptopS {
+            border-radius: 16px;
+        }
         @include ipadPro {
             width: 314px;
             border: 5px solid $color-gold;
+            border-radius: 20px;
+        }
+        @include tablet {
+            width: 220px;
+            border: 4px solid $color-gold;
+            border-radius: 16px;
         }
     }
     &__img {
@@ -384,6 +435,9 @@
         }
         @include tablet {
             width: 46%;
+        }
+        @include mobileL {
+            width: 35%;
         }
     }
     @include tablet {
@@ -406,5 +460,20 @@
         width: 100%;
         height: 100%;
         top: 0;
+    }
+}
+@include mobileL {
+    .wonItem__wrapper {
+        .market__itemRarity {
+            margin-top: 3px;
+            font-size: 17px;
+        }
+        .market__itemDsc, .itemDsc {
+            font-size: 12px;
+            margin-top: 5px;
+        }
+        .market__itemStats td {
+            font-size:  12px;
+        }
     }
 }
