--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -156,6 +156,9 @@
         @include tablet {
             margin-top: 72px;
         }
+        @include mobileL {
+            margin-top: 64px;
+        }
     }
     &__portraitActionBar {
         position: absolute;
@@ -196,6 +199,11 @@
             width: 47px;
             transform: translateY(-14px);
         }
+        @include mobileL {
+            height: 20px;
+            width: 28px;
+            transform: translateY(-1px);
+        }
     }
     &__portraitActionIcon {
         width: 27px;
@@ -210,6 +218,10 @@
             width: auto;
             height: 33px;
             margin: -14px 5px;
+        }
+        @include mobileL {
+            height: 21px;
+            margin: -1px 5px;
         }
     }
 
@@ -242,6 +254,11 @@
             width: 301px;
             border-radius: 20px;
             padding: 10px;
+        }
+        @include mobileL {
+            border-radius: 16px;
+            padding: 6px;
+            width: 270px;
         }
         &-common {
             border: 4px solid $color-blue;
@@ -312,6 +329,9 @@
             }
             @include tablet {
                 left: 192px;
+            }
+            @include mobileL {
+                left: 100px;
             }
         }
         &-weapon {
@@ -542,6 +562,11 @@
             height: 35px;
             margin-bottom: 11px;
         }
+        @include mobileL {
+            margin-top: 8px;
+            height: 29px;
+            margin-bottom: 7px;
+        }
     }
     &__equipmentItemSellWrapper {
         height: 30px;
@@ -689,7 +714,7 @@
         }
         @include mobileL {
             padding: 4px 0;
-    border-radius: 5px;
+            border-radius: 5px;
         }
     }
     &__equipmentIcon {
@@ -735,6 +760,11 @@
                 width: 54px;
                 left: -30px;
             }
+            @include mobileL {
+                height: 38px;
+                width: 38px;
+                left: -21px;
+            }
         }
         &::after {
             content: "";
@@ -757,6 +787,11 @@
                 height: 54px;
                 width: 54px;
                 right: -30px;
+            }
+            @include mobileL {
+                height: 38px;
+                width: 38px;
+                right: -21px;
             }
         }
 
@@ -783,6 +818,12 @@
         }
         @include ipadPro {
             border: 6px solid $color-red;
+        }
+        @include mobileL {
+            border: 4px solid $color-red;
+            height: 26%;
+            width: 93%;
+            padding: 12px;
         }
     }
 
@@ -938,12 +979,17 @@
         @include ipadPro {
             width: 118px;
             height: 118px;
-            border: 7px solid #aa6615;
+            border: 7px solid $color-wood-dark;
         }
         @include tablet {
             width: 137px;
             height: 137px;
-            border: 9px solid #aa6615;
+            border: 9px solid $color-wood-dark;
+        }
+        @include mobileL {
+            width: 96px;
+            height: 96px;
+            border: 5px solid $color-wood-dark;
         }
     }
     &__generalText {
@@ -975,6 +1021,12 @@
             padding: 7px 0;
             margin-top: 9px;
             margin-bottom: 10px;
+        }
+        @include mobileL {
+            width: 96px;
+    padding: 4px 0;
+    margin-top: 6px;
+    margin-bottom: 4px;
         }
     }
     &__goldBar {
@@ -1117,6 +1169,9 @@
         @include ipadPro {
             padding-top: 10px;
         }
+        @include mobileL {
+            padding-top: 9px;
+        }
     }
     tr {
         max-height: 30px;
@@ -1180,6 +1235,9 @@
     @include tablet {
         padding: 8px 0;
     }
+    @include mobileL {
+        padding: 4px 0;
+    }
 }
 .profile__item--nameBlue {
     color: $color-blue !important;
@@ -1229,6 +1287,11 @@
             font-size: 26px;
             padding: 3px 11px;
             border-radius: 8px;
+        }
+        @include mobileL {
+            font-size: 18px;
+            padding: 2px 7px;
+            border-radius: 7px;
         }
     }
 }
